src/test/resources/Parser/SyntaxErrors/IncompatibleTypesForEach.front
class A {
    void test () {
        for (A a : new char[1]){}
    }
}